# shadows

./: CMakeLists.txt  README.md
shaders/: standard_frag.glsl  standard_vert.glsl
src/: Camera.cpp  Camera.h  Light.cpp  Light.h  Object.cpp  Object.h  Shader.cpp  Shader.h  main.cpp
